gcc:         PR other/58545         * reload1.c (update_eliminables_and_spill): New function, broken         out of reload.         (reload): Use it.  Check for frame size change after frame         size alignment, and call update_eliminables_and_spill first         if continue-ing. gcc/testsuite:         PR other/58545         * gcc.target/avr/pr58545.c: New test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@204234 138bc75d-0d04-0410-961f-82ee72b054a4